2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.RegexToolkit.addin.xml: Bump add-in versions.

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.RegexToolkit.mdp, Makefile.am: Directory reorganization.

2007-12-02  Lluis Sanchez Gual <lluis@novell.com> 

	* AssemblyInfo.cs: Sync assembly and add-in versions.

2007-11-09  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.RegexToolkit/RegexLibraryWindow.cs: Track LoggingService API
	  changes.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.RegexToolkit.addin.xml: Bump MD version.

2007-10-24  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.RegexToolkit/RegexLibraryWindow.cs,
	  MonoDevelop.RegexToolkit/RegexToolkitWindow.cs: Regex library behaves
	  more nicely when scrolling.

2007-10-24  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.RegexToolkit.RegexToolkitWindow.cs,
	  gtk-gui/gui.stetic: Made the replacement regex label clearer.

2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.RegexToolkit.mdp: Project file names updated by change in MD
	  path functions.

2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.RegexToolkit.addin.xml: Bump MD version.

2007-09-20  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/MonoDevelop.RegexToolkit.RegexLibraryWindow.cs,
	  gtk-gui/MonoDevelop.RegexToolkit.RegexToolkitWindow.cs,
	  gtk-gui/generated.cs,
	  gtk-gui/MonoDevelop.RegexToolkit.UpdateInProgressDialog.cs: Regenerated
	  GUI files.

2007-08-31  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.RegexToolkit/RegexLibraryWindow.cs,
	  gtk-gui/MonoDevelop.RegexToolkit.RegexLibraryWindow.cs,
	  gtk-gui/MonoDevelop.RegexToolkit.RegexToolkitWindow.cs: Changes due to
	  new property infrastructure.

2007-08-15  Michael Hutchinson <m.j.hutchinson@gmail.com>

	* MonoDevelop.RegexToolkit/UpdateInProgressDialog.cs: Use fully 
	  qualified type names inside anonymous delegates as a workaround 