@@ -1,3 +1,8 @@
+2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* gtk-gui/MonoDevelop.RegexToolkit.RegexToolkitWindow.cs,
+	  gtk-gui/gui.stetic: Updated.
+
 2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.RegexToolkit.addin.xml: Bump add-in versions.
